# haskell-practice

./: README.md
html-dsl/: html-pres.hs  html.hs  html2.hs  htmlPres.hs  sample01.hs  sample02.hs  sample03.hs
keys/: README.md  key-sample.hs
scotty/first-scotty/: .gitignore  Main.hs  first-scotty.cabal  stack.yaml
scotty/first-scotty/Controller/: .#Users.hs  Complete.hs  Confirm.hs  Index.hs  Input.hs  Params.hs  Response.hs  Users.hs
scotty/first-scotty/Domain/: Age.hs  Name.hs  User.hs
scotty/first-scotty/Form/: UserForm.hs
scotty/first-scotty/Infra/Repository/: Sql.hs  User.hs
scotty/first-scotty/Tool/: NumTool.hs
scotty/first-scotty/View/: Complete.hs  Confirm.hs  Detail.hs  Index.hs  Input.hs  List.hs  Render.hs  UserForm.hs  UserInfo.hs
scotty/first-scotty/template/: detail.html  finish.html  form-confirm.hamlet  form-confirm.html  form-input.hamlet  form-input.html  index.hamlet  index.html  list.html
scotty/scotty-web-api/: scotty-web-api.cabal  stack.yaml
scotty/scotty-web-api/app/: Main.hs
scotty/scotty-web-api/memo/: 02-about-monad-return-type.md  03-about-state-monad.md  04-lazy-evaluation.md  05-about-language-extensions.md  06-about-deriving.md  about-instance.md  about-language-extensions.md  about-mocking.md  about-monad-return-type.md  about-monad-transformer.md
scotty/scotty-web-api/src/: WebApi.hs
scotty/scotty-web-api/src/Domain/: Age.hs  Name.hs  User.hs  UserSearch.hs  Validate.hs
scotty/scotty-web-api/src/Infra/Repository/: User.hs
scotty/scotty-web-api/src/UseCase/: User.hs
scotty/scotty-web-api/test/Domain/: AgeSpec.hs  NameSpec.hs  UserSearchSpec.hs  UserSpec.hs
scotty/scotty-web-api/test/Infra/Repository/: UserMock.hs
scotty/scotty-web-api/test/UseCase/: UserSpec.hs
shisoku/: README.md  shisoku.hs
sql-dsl/: README.md  relation.hs  samples.hs
wai/first-wai/: first-wai.cabal
wai/first-wai/src/: Complete.hs  Confirm.hs  Header.hs  Index.hs  Main.hs  Router.hs  User.hs  ViewForm.hs  complete.html  index.html
wai/first-yesod/: .gitignore  Application.hs  first-yesod.cabal
wai/first-yesod/Handler/: .#UserForm.hs  Complete.hs  Pages.hs  UserForm.hs
wai/first-yesod/app/: devel.hs
wai/first-yesod/config/: keter.yml  routes
wai/first-yesod/templates/: complete.hamlet  form-comp.hamlet  pages.hamlet  user-form.hamlet
wai/first-yesod/test/Handler/: CompleteSpec.hs  PagesSpec.hs  UserFormSpec.hs
